feat: implement attendance, staff assignment, notification, and order management systems with WebSocket integration